# source/app/Http/Requests/RaceMarkMemo/UpsertRaceMarkMemoRequest.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Http\Requests\RaceMarkMemo;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpsertRaceMarkMemoRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * @return array<string, ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'content' => ['required', 'string', 'min:1', 'max:1000'],
+        ];
+    }
+}
